--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-    <!-- For Debug 
-  <base href="/">-->
+    <!-- For Debug -->
+  <base href="/"> 
   
-  <!-- To host on Git hub-->
-  <base href="./">  
+  <!-- To host on Git hub
+  <base href="./">  -->
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
