--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-    <!-- For Debug
-  <base href="/">  -->
+    <!-- For Debug  -->
+  <!-- <base href="/"> -->
   
-  <!-- To host on Git hub  -->
+  <!-- To host on Git hub-->  
   <base href="./">
 
   <meta charset="UTF-8">
