--- a/index.html
+++ b/index.html
@@ -14,21 +14,31 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-    <!-- For Debug   
-  <base href="/">-->
+    <!-- For Debug  
+  <base href="/"> -->
   
   <!-- To host on Git hub  -->
   <base href="./">   
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+
+  <!-- Primary Meta Tags -->
+  <title>SSPathology Lab - Trusted Diagnostic Services</title>
+  <meta name="title" content="SSPathology Lab - Trusted Diagnostic Services">
+  <meta name="description" content="SSPathology Lab provides accurate, fast, and affordable diagnostic services. Book blood tests, COVID-19 tests, full body checkups, and more online.">
+
+  <!-- SEO Keywords -->
+  <meta name="keywords" content="Pathology Lab, Blood Test, Diagnostic Services, Health Checkup, COVID Test, SSPathology">
+  <meta name="author" content="SSPathology Team">
+  <meta name="description" content="SSPathology, Lab, Pathology, Application, Flutter, Web, App">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="sspathology_application">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
