Adding Scrolling for Login Page

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-    <!-- For Debug  
-  <base href="/"> -->
+    <!-- For Debug  -->
+  <!-- <base href="/">  -->
   
-  <!-- To host on Git hub   -->
+  <!-- To host on Git hub -->   
   <base href="./">  
 
 
@@ -30,7 +30,7 @@
   <meta name="description" content="SSPathology Lab provides accurate, fast, and affordable diagnostic services. Book blood tests, COVID-19 tests, full body checkups, and more online.">
 
   <!-- SEO Keywords -->
-  <meta name="keywords" content="Pathology Lab, Blood Test, Diagnostic Services, Health Checkup, COVID Test, SSPathology">
+  <meta name="keywords" content="Pathology Lab, Blood Test, Diagnostic Services, Health Checkup, COVID Test, SSPathology, GOA lab, Diagnostic Lab, Health Services, Medical Testing, Laboratory Services, Blood Sample Collection, Health Checkup Packages, Affordable Diagnostics, Trusted Lab Services, Online Lab Booking, Health Monitoring, Preventive Health Checkup, Medical Laboratory, Diagnostic Tests, Blood Work, Health Screening, Wellness Checkup, Laboratory Testing, Health Diagnostics, Blood Analysis, Medical Checkup, Health Assessment">
   <meta name="author" content="SSPathology Team">
   <meta name="description" content="SSPathology, Lab, Pathology, Application, Flutter, Web, App">
 
@@ -39,6 +39,12 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="sspathology_application">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
+
+  <meta name="geo.region" content="IN-GA" />
+<meta name="geo.placename" content="Goa" />
+<meta name="geo.position" content="15.2993;74.1240" />
+<meta name="ICBM" content="15.2993, 74.1240" />
+
   
 
   <!-- Favicon -->
