--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     the `--base-href` argument provided to `flutter build`.
   -->
     <!-- For Debug  -->
-  <!-- <base href="/">  -->
+  <base href="/"> 
   
   <!-- To host on Git hub -->   
-  <base href="./">  
+  <!-- <base href="./">   -->
 
 
   <meta charset="UTF-8">
@@ -30,7 +30,7 @@
   <meta name="description" content="SSPathology Lab provides accurate, fast, and affordable diagnostic services. Book blood tests, COVID-19 tests, full body checkups, and more online.">
 
   <!-- SEO Keywords -->
-  <meta name="keywords" content="Pathology Lab, Blood Test, Diagnostic Services, Health Checkup, COVID Test, SSPathology, GOA lab, Diagnostic Lab, Health Services, Medical Testing, Laboratory Services, Blood Sample Collection, Health Checkup Packages, Affordable Diagnostics, Trusted Lab Services, Online Lab Booking, Health Monitoring, Preventive Health Checkup, Medical Laboratory, Diagnostic Tests, Blood Work, Health Screening, Wellness Checkup, Laboratory Testing, Health Diagnostics, Blood Analysis, Medical Checkup, Health Assessment">
+  <meta name="keywords" content="Pathology Lab,SSPathology ,SSPathology Lab, Goa Lab, Goa Pathology,Blood Test, Diagnostic Services, Health Checkup, COVID Test, SSPathology, GOA lab, Diagnostic Lab, Health Services, Medical Testing, Laboratory Services, Blood Sample Collection, Health Checkup Packages, Affordable Diagnostics, Trusted Lab Services, Online Lab Booking, Health Monitoring, Preventive Health Checkup, Medical Laboratory, Diagnostic Tests, Blood Work, Health Screening, Wellness Checkup, Laboratory Testing, Health Diagnostics, Blood Analysis, Medical Checkup, Health Assessment">
   <meta name="author" content="SSPathology Team">
   <meta name="description" content="SSPathology, Lab, Pathology, Application, Flutter, Web, App">
 
