--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <!--
     If you are serving your web app in a path other than the root, change the
@@ -14,11 +15,11 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-    <!-- For Debug  -->
+  <!-- For Debug  -->
   <!-- <base href="/">  -->
-  
-  <!-- To host on Git hub -->   
-  <base href="./">  
+
+  <!-- To host on Git hub -->
+  <base href="./">
 
 
   <meta charset="UTF-8">
@@ -27,10 +28,12 @@
   <!-- Primary Meta Tags -->
   <title>SSPathology Lab - Trusted Diagnostic Services</title>
   <meta name="title" content="SSPathology Lab - Trusted Diagnostic Services">
-  <meta name="description" content="SSPathology Lab provides accurate, fast, and affordable diagnostic services. Book blood tests, COVID-19 tests, full body checkups, and more online.">
+  <meta name="description"
+    content="SSPathology Lab provides accurate, fast, and affordable diagnostic services. Book blood tests, COVID-19 tests, full body checkups, and more online.">
 
   <!-- SEO Keywords -->
-  <meta name="keywords" content="Pathology Lab,SSPathology ,SSPathology Lab, Goa Lab, Goa Pathology,Blood Test, Diagnostic Services, Health Checkup, COVID Test, SSPathology, GOA lab, Diagnostic Lab, Health Services, Medical Testing, Laboratory Services, Blood Sample Collection, Health Checkup Packages, Affordable Diagnostics, Trusted Lab Services, Online Lab Booking, Health Monitoring, Preventive Health Checkup, Medical Laboratory, Diagnostic Tests, Blood Work, Health Screening, Wellness Checkup, Laboratory Testing, Health Diagnostics, Blood Analysis, Medical Checkup, Health Assessment">
+  <meta name="keywords"
+    content="Pathology Lab,SSPathology ,SSPathology Lab, Goa Lab, Goa Pathology,Blood Test, Diagnostic Services, Health Checkup, COVID Test, SSPathology, GOA lab, Diagnostic Lab, Health Services, Medical Testing, Laboratory Services, Blood Sample Collection, Health Checkup Packages, Affordable Diagnostics, Trusted Lab Services, Online Lab Booking, Health Monitoring, Preventive Health Checkup, Medical Laboratory, Diagnostic Tests, Blood Work, Health Screening, Wellness Checkup, Laboratory Testing, Health Diagnostics, Blood Analysis, Medical Checkup, Health Assessment">
   <meta name="author" content="SSPathology Team">
   <meta name="description" content="SSPathology, Lab, Pathology, Application, Flutter, Web, App">
 
@@ -41,19 +44,21 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <meta name="geo.region" content="IN-GA" />
-<meta name="geo.placename" content="Goa" />
-<meta name="geo.position" content="15.2993;74.1240" />
-<meta name="ICBM" content="15.2993, 74.1240" />
+  <meta name="geo.placename" content="Goa" />
+  <meta name="geo.position" content="15.2993;74.1240" />
+  <meta name="ICBM" content="15.2993, 74.1240" />
 
-  
+
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/png" href="favicon.png" />
 
   <title>sspathology_application</title>
   <link rel="manifest" href="manifest.json">
 </head>
+
 <body>
   <script src="flutter_bootstrap.js" async></script>
 </body>
+
 </html>
